inst/components/scss/sidebar.scss
/* ... */
.bslib-sidebar-layout {
  // Sidebar init js uses this variable to know which device size we're on
  --bslib-sidebar-js-window-size: desktop;
}

@include media-breakpoint-down(sm) {
  .bslib-sidebar-layout {
    --bslib-sidebar-js-window-size: mobile;
  }
}

@include media-breakpoint-up(sm) {
  .bslib-sidebar-layout[data-collapsible-desktop="false"] {
    // Always-open sidebars don't have a toggle & can use normal padding
    --_padding-icon: var(--_padding);

    > .collapse-toggle {
      display: none;
    }

    > .sidebar[hidden] {
      display: block !important;
      > .sidebar-content {
        display: flex !important;
      }
    }
  }
}

@include media-breakpoint-down(sm) {
  .bslib-sidebar-layout {
    &, &.sidebar-right {
      // Remove sidebar borders in mobile view (except always-open, added below)
      > .sidebar { border: none }

      // Main area takes up entire layout area to avoid layout shift when
      // sidebar is expanded as an overlay.
      > .main {
        grid-column: 1 / 3;
      }
    }

    &[data-collapsible-mobile="true"] {
      // Sidebar layer has to be lifted up to cover other (nested) sidebars
      &:not(.sidebar-collapsed), &.transitioning {
        > .sidebar { z-index: $zindex-offcanvas; }
        > .collapse-toggle { z-index: $zindex-offcanvas; }
      }

      // Keep toggle on sidebar side when expanded on mobile
      &:not(.sidebar-right) > .collapse-toggle {
        left: var(--_icon-size);
        right: unset;
      }

      &.sidebar-right > .collapse-toggle {
        right: var(--_icon-size);
        left: unset;
      }

      > .sidebar {
        backdrop-filter: blur(6px);
        -webkit-backdrop-filter: blur(6px);
        opacity: var(--_sidebar-mobile-opacity, 1);
        max-width: var(--_sidebar-mobile-max-width, 100%);
        box-shadow: var(--_sidebar-mobile-box-shadow);
        margin: 0;
      }

      // When `max-width` is less than 100%, push it to the appropriate side
      &:not(.sidebar-right) > .sidebar {
        margin-right: auto;
      }
      &.sidebar-right > .sidebar {
        margin-left: auto;
      }

      // Either sidebar or main area take up entire layout depending on state
      $full-closed: 100% 0;
      $closed-full: 0 100%;
      grid-template-columns: $full-closed;
      &.sidebar-right {
        grid-template-columns: $closed-full;
      }

      &.sidebar-collapsed {
        grid-template-columns: $closed-full;
        &.sidebar-right {
          grid-template-columns: $full-closed;
        }
      }

      // Set padding on main area to account for toggle button
      > .main {
        padding-top: var(--_toggle-collective-height);
        padding-left: var(--_padding);
        padding-right: var(--_padding);
      }

      // Soften main area when sidebar is expanded over content
      > .main {
        opacity: 0.2;
        transition: opacity var(--_transition-easing-x) var(--_transition-duration);
      }
      &.sidebar-collapsed > .main {
        opacity: 1;
      }
    }
  }
}

@include media-breakpoint-down(sm) {
  .bslib-sidebar-layout[data-collapsible-mobile="false"] {
    // Always open sidebars become "flow" layouts
    display: block !important;
    --_padding-icon: var(--_padding); // use normal padding all around
    --_vert-border: var(--_border);   // and activate top border

    > .sidebar[hidden] {
      display: block !important;
      > .sidebar-content {
        display: flex !important;
      }
    }

    & > .sidebar {
      max-height: var(--_mobile-max-height);
      overflow-y: auto;
      border-top: var(--_vert-border);
    }

    > .collapse-toggle {
      display: none;
    }
  }
}

